--- a/Numpy.ipynb
+++ b/Numpy.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,7 +54,7 @@
       "metadata": {
         "id": "aS1ry2oIWkI8"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -64,7 +65,7 @@
       "metadata": {
         "id": "dQnxv3W8ltof"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -79,7 +80,7 @@
         "id": "x_P0yEuQoE8-",
         "outputId": "65acc768-1dde-4070-865b-442efd80230a"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -110,7 +111,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -220,10 +221,22 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "353JSjbwqeJa"
+        "id": "353JSjbwqeJa",
+        "outputId": "3299e739-9034-4526-a8dc-973fa6073eb0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
     }
   ]
 }
